2009-01-09  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Check for the existence of the gettext executables.

2009-01-07  Geoff Norton  <gnorton@novell.com>

	* configure.in: Provide platform information to the mcs build tree

2009-01-06  Jb Evain  <jbevain@novell.com>

	* scripts/Makefile.am: don't generate a script for the now
	dead mono-api-diff.

2008-12-05  Jonathan Pryor  <jpryor@novell.com>

	* man/mdoc-update.1: Document -fno-assembly-versions.

2009-01-05  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Disable sigaltstack on freebsd as it doesn't seem to work.

2008-12-16  Marek Habersack  <mhabersack@novell.com>

	* data/system.web.extensions.design_1.0.pc.in: added

	* data/Makefile.am (EXTRA_DIST): added
	system.web.extensions.design_1.0.pc.in. Also added to
	pkgconfig_DATA

	* configure.in: added data/system.web.extensions_1.0.pc to
	AC_OUTPUT

2008-12-16  Bill Holmes  <billholmes54@gmail.com>

	* winconfig.h : Defining the SIZEOF_REGISTER variable for the MSVC builds.

	Code is contributed under MIT/X11 license.

2008-12-15  Marek Habersack  <mhabersack@novell.com>

	* data/Makefile.am (EXTRA_DIST): added
	system.web.extensions_1.0.pc.in. Also added to pkgconfig_DATA

	* data/system.web.extensions_1.0.pc.in: added. This file serves
	the purpose of making MonoDevelop see the 1.0 version of the
	System.Web.Extensions assembly in the project references
	editor. This will also make legacy 2.0 ASP.NET apps not fail when
	they reference the 1.0 version of the assembly in their project
	files.

	* configure.in: added data/system.web.extensions_1.0.pc to AC_OUTPUT

2008-12-11  Mark Mason <mmason@upwardaccess.com>

	* configure.in: introduce SIZEOF_REGISTER - usually ==SIZEOF_VOID_P, except on mips/n32
	
2008-12-05  Marek Habersack  <mhabersack@novell.com>

	* configure.in: check whether round (3) and rint (3) are present
	in the C library.

2008-12-05  Jonathan Pryor  <jpryor@novell.com>
