@@ -1415,9 +1415,12 @@ if test x$platform_win32 = xno; then
 	AC_CHECK_HEADERS(sys/extattr.h)
 	AC_CHECK_HEADERS(sys/sendfile.h)
 	AC_CHECK_HEADERS(sys/statvfs.h)
+	AC_CHECK_HEADERS(sys/statfs.h)
 	AC_CHECK_HEADERS(sys/vfstab.h)
 	AC_CHECK_HEADERS(sys/xattr.h)
 	AC_CHECK_HEADERS(sys/mman.h)
+	AC_CHECK_HEADERS(sys/param.h)
+	AC_CHECK_HEADERS(sys/mount.h)
 	AC_CHECK_FUNCS(getdomainname)
 	AC_CHECK_FUNCS(setdomainname)
 	AC_CHECK_FUNCS(fgetgrent)
