@@ -12,15 +12,20 @@
 
 #include <glib.h>
 
-typedef union 
-{
-	struct 
-	{
+typedef union {
+	struct {
 		guint32 LowPart;
 		gint32 HighPart;
 	} u;
-	
 	guint64 QuadPart;
 } WapiLargeInteger;
+
+typedef union {
+	struct {
+		guint32 LowPart;
+		guint32 HighPart;
+	} u;
+	guint64 QuadPart;
+} WapiULargeInteger;
 
 #endif /* _WAPI_TYPES_H_ */
