@@ -63,6 +63,8 @@ typedef WapiWSABuf WSABUF;
 typedef WapiWSABuf *LPWSABUF;
 typedef WapiLargeInteger LARGE_INTEGER;
 typedef WapiLargeInteger *PLARGE_INTEGER;
+typedef WapiULargeInteger ULARGE_INTEGER;
+typedef WapiULargeInteger *PULARGE_INTEGER;
 typedef WapiSystemInfo SYSTEM_INFO;
 typedef WapiSystemInfo *LPSYSTEM_INFO;
 typedef WapiFloatingSaveArea FLOATING_SAVE_AREA;
